cleaned up. added initial attempt at a github actions workflow
